# ConfluenceChatAgent

./: README.md  Streamlit_Fastapi.py  main.py  pyproject.toml  requirements.txt  streamlit.py
app/: api.py  ingest.py  llm.py  parser.py  vectorstore.py
faiss_index/: index.faiss  index.pkl
